// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Input / Select / SingleSelectList Item default 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  height: 24px;
  color: #282823;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c1:hover {
  background: #424242;
}

.c2 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

<span
  className="c0 c1"
>
  <span
    className="c2"
  >
    First
  </span>
</span>
`;

exports[`Storyshots Molecules / Input / Select / SingleSelectList Item disabled 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  height: 24px;
  color: #282823;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
  color: #A0A09B pointer-events:none;
}

.c1:hover {
  background: #424242;
}

.c2 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

<span
  className="c0 c1"
>
  <span
    className="c2"
  >
    First
  </span>
</span>
`;

exports[`Storyshots Molecules / Input / Select / SingleSelectList Item selected 1`] = `
.c4 {
  padding-left: 8px;
  background-color: transparent;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  height: 24px;
  color: #336BFF;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c1:hover {
  background: #424242;
}

.c2 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

<span
  className="c0 c1"
>
  <span
    className="c2"
  >
    First
  </span>
  <div
    className="c3"
  >
    <div
      className="c4"
    >
      <svg
        aria-hidden="true"
        className="c5"
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
        />
      </svg>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules / Input / Select / SingleSelectList List with different arrow positions 1`] = `
.c14 {
  padding-left: 8px;
  background-color: transparent;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-height: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  position: relative;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 100%;
  min-height: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  overflow-y: auto;
  width: 100%;
}

.c7 {
  position: relative;
  overflow-x: hidden;
}

.c17 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  bottom: 0;
}

.c8 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  top: 0;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  height: 24px;
  color: #282823;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c10:hover {
  background: #424242;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  height: 24px;
  color: #336BFF;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c12:hover {
  background: #424242;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  height: 24px;
  color: #282823;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
  color: #A0A09B pointer-events:none;
}

.c16:hover {
  background: #424242;
}

.c11 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  position: relative;
  max-height: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  color: #282823;
  -webkit-transform: translateY(10px);
  -ms-transform: translateY(10px);
  transform: translateY(10px);
  padding-top: 12px;
  padding-bottom: 12px;
  width: 300px;
}

.c4:before {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: 100%;
  border-bottom: 6px solid;
  border-bottom-color: #BCBCB6;
}

.c4:after {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: calc(100% - 1px);
  border-bottom: 6px solid;
  border-bottom-color: #FFFFFF;
}

.c18 {
  position: relative;
  max-height: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  color: #282823;
  -webkit-transform: translateY(10px);
  -ms-transform: translateY(10px);
  transform: translateY(10px);
  padding-top: 12px;
  padding-bottom: 12px;
  width: 300px;
}

.c18:before {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: 100%;
  border-bottom: 6px solid;
  border-bottom-color: #BCBCB6;
}

.c18:after {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: calc(100% - 1px);
  border-bottom: 6px solid;
  border-bottom-color: #FFFFFF;
}

.c19 {
  position: relative;
  max-height: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  color: #282823;
  -webkit-transform: translateY(10px);
  -ms-transform: translateY(10px);
  transform: translateY(10px);
  padding-top: 12px;
  padding-bottom: 12px;
  width: 300px;
}

.c19:before {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: 100%;
  border-bottom: 6px solid;
  border-bottom-color: #BCBCB6;
}

.c19:after {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: calc(100% - 1px);
  border-bottom: 6px solid;
  border-bottom-color: #FFFFFF;
}

.c20 {
  position: relative;
  max-height: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  color: #282823;
  -webkit-transform: translateY(-10px);
  -ms-transform: translateY(-10px);
  transform: translateY(-10px);
  padding-top: 12px;
  padding-bottom: 12px;
  width: 300px;
}

.c20:before {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: 100%;
  border-top: 6px solid;
  border-top-color: #BCBCB6;
}

.c20:after {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: calc(100% - 1px);
  border-top: 6px solid;
  border-top-color: #FFFFFF;
}

.c21 {
  position: relative;
  max-height: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  color: #282823;
  -webkit-transform: translateY(-10px);
  -ms-transform: translateY(-10px);
  transform: translateY(-10px);
  padding-top: 12px;
  padding-bottom: 12px;
  width: 300px;
}

.c21:before {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: 100%;
  border-top: 6px solid;
  border-top-color: #BCBCB6;
}

.c21:after {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: calc(100% - 1px);
  border-top: 6px solid;
  border-top-color: #FFFFFF;
}

.c22 {
  position: relative;
  max-height: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  color: #282823;
  -webkit-transform: translateY(-10px);
  -ms-transform: translateY(-10px);
  transform: translateY(-10px);
  padding-top: 12px;
  padding-bottom: 12px;
  width: 300px;
}

.c22:before {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: 100%;
  border-top: 6px solid;
  border-top-color: #BCBCB6;
}

.c22:after {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: calc(100% - 1px);
  border-top: 6px solid;
  border-top-color: #FFFFFF;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Placement bottom, arrow default (right)
      </span>
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 c4"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              className="c7"
            >
              <div
                className="c8"
              />
              <span
                className="c9 c10"
              >
                <span
                  className="c11"
                >
                  Default?
                </span>
              </span>
              <span
                className="c9 c12"
              >
                <span
                  className="c11"
                >
                  First
                </span>
                <div
                  className="c13"
                >
                  <div
                    className="c14"
                  >
                    <svg
                      aria-hidden="true"
                      className="c15"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
              <span
                className="c9 c10"
              >
                <span
                  className="c11"
                >
                  SecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecond
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <div
                className="c17"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Placement bottom, arrow left
      </span>
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 c18"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              className="c7"
            >
              <div
                className="c8"
              />
              <span
                className="c9 c10"
              >
                <span
                  className="c11"
                >
                  Default?
                </span>
              </span>
              <span
                className="c9 c12"
              >
                <span
                  className="c11"
                >
                  First
                </span>
                <div
                  className="c13"
                >
                  <div
                    className="c14"
                  >
                    <svg
                      aria-hidden="true"
                      className="c15"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <div
                className="c17"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Placement bottom, arrow center
      </span>
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 c19"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              className="c7"
            >
              <div
                className="c8"
              />
              <span
                className="c9 c10"
              >
                <span
                  className="c11"
                >
                  Default?
                </span>
              </span>
              <span
                className="c9 c12"
              >
                <span
                  className="c11"
                >
                  First
                </span>
                <div
                  className="c13"
                >
                  <div
                    className="c14"
                  >
                    <svg
                      aria-hidden="true"
                      className="c15"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
              <span
                className="c9 c10"
              >
                <span
                  className="c11"
                >
                  Second
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <div
                className="c17"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Placement top, arrow default (right)
      </span>
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 c20"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              className="c7"
            >
              <div
                className="c8"
              />
              <span
                className="c9 c10"
              >
                <span
                  className="c11"
                >
                  Default?
                </span>
              </span>
              <span
                className="c9 c12"
              >
                <span
                  className="c11"
                >
                  First
                </span>
                <div
                  className="c13"
                >
                  <div
                    className="c14"
                  >
                    <svg
                      aria-hidden="true"
                      className="c15"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
              <span
                className="c9 c10"
              >
                <span
                  className="c11"
                >
                  SecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecond
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <div
                className="c17"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Placement top, arrow left
      </span>
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 c21"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              className="c7"
            >
              <div
                className="c8"
              />
              <span
                className="c9 c10"
              >
                <span
                  className="c11"
                >
                  Default?
                </span>
              </span>
              <span
                className="c9 c12"
              >
                <span
                  className="c11"
                >
                  First
                </span>
                <div
                  className="c13"
                >
                  <div
                    className="c14"
                  >
                    <svg
                      aria-hidden="true"
                      className="c15"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <div
                className="c17"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Placement top, arrow center
      </span>
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 c22"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              className="c7"
            >
              <div
                className="c8"
              />
              <span
                className="c9 c10"
              >
                <span
                  className="c11"
                >
                  Default?
                </span>
              </span>
              <span
                className="c9 c12"
              >
                <span
                  className="c11"
                >
                  First
                </span>
                <div
                  className="c13"
                >
                  <div
                    className="c14"
                  >
                    <svg
                      aria-hidden="true"
                      className="c15"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
              <span
                className="c9 c10"
              >
                <span
                  className="c11"
                >
                  Second
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c9 c16"
              >
                <span
                  className="c11"
                >
                  Disabled
                </span>
              </span>
              <div
                className="c17"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
